--- a/css/Desktop.css
+++ b/css/Desktop.css
@@ -87,7 +87,11 @@
           }
           
           .grid_p {
-              font-size:1.2em;
+              font-size:2em;
+          }
+		  
+		  .grid_t {
+              font-size:1.5em;
           }
 		  
 		  .single-footer-widget {
