--- a/css/Mobile.css
+++ b/css/Mobile.css
@@ -98,6 +98,11 @@
               font-size:2.2em;
               font-weight:200;
           }
+		  .grid_t {
+              font-size:2em;
+			  font-weight:200;
+          }
+		  
 		  
 		  .single-footer-widget {
 			  font-size:1.5em;
